fix the stretch in the solution of 07 flex layout 2

--- a/flex/07-flex-layout-2/solution/solution.css
+++ b/flex/07-flex-layout-2/solution/solution.css
@@ -73,6 +73,7 @@ a {
   padding: 32px;
   display: flex;
   flex-wrap: wrap;
+  align-content: flex-start;
 }
 
 .card {
